--- a/backend/views/home.handlebars
+++ b/backend/views/home.handlebars
@@ -3,3 +3,4 @@
   <li><a href='/about'>About</a></li>
   <li><a href='/contact'>Contact</a></li>
 </ul>
+<img src='images/cat.jpg' alt='Cat' width='500' />
